Replace python package installation manager from pip to apt to avoi the error

--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -52,8 +52,9 @@
 
 - name: Install python pexpect
   become: true
-  pip:
-    name: pexpect
+  apt:
+    name: python3-pexpect
+    update_cache: true
 
 - name: Automate docker startup
   script: docker_init.sh {{ gists.docker }}
